--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   
 </head>
 <body>
-	<nav>
+	<nav id="sign_in_nav">
 	<% if user_signed_in? %>
 		Signed in as <%= current_user.email %>
 	<% else %>
